# multi-language-bazel-monorepo

./: .gitignore  README.md  WORKSPACE.bazel  bazel-bin  bazel-multi-language-bazel-monorepo  bazel-out  bazel-testlogs  package.json
.github/workflows/: main.yml
projects/calculator/: BUILD.bazel  calculator.py  calculator_test.py
projects/go_hello_world/: BUILD.bazel
projects/go_web/: BUILD.bazel  main.go
projects/my-python-app/: BUILD.bazel  main.py
projects/node_calculator/: BUILD.bazel  calculator.js  calculator.spec.js
projects/node_web/: BUILD.bazel  index.js
